--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.pricing-table {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 1000px;
+  min-height: 550px;
+  background-color: blue;
+  margin-top: 5%;
 }
 
-.App-link {
-  color: #61dafb;
+.pricing-plan {
+  background-color: #fff;
+  margin: 0 10px;
+  padding: 10px;
+  width: 280px;
+  max-height: 450px;
+  border-radius: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.plan-title {
+  margin-top: 20px;
+  font-size: 1em;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.plan-price {
+  font-size: 2em;
+  color: #333;
+  font-weight: bolder;
+  border-bottom: 1px #000 solid;
+  width: 85%;
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
+
+.plan-features {
+  list-style: none;
+  padding: 0;
+  text-align: left;
+  margin:20px
+}
+
+.plan-features li {
+  margin:15px;
+  font-size: 0.9em;
+}
+
+.plan-button {
+  background-color: #007AFF;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  margin-top: auto;
+  transition: background-color 0.3s ease;
+  width: 90%;
+}
+
+.plan-button:hover {
+  background-color: #3793f6;
+}
+
+.tick {
+  color: black;
+}
+
+.cross {
+  color: #D6D7D8; 
 }
